<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:background="#f1f0f0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="#6fcc91"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="#6fcc91"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/boy"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:alpha="10"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dfdede"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#dfdede"
            android:paddingLeft="@dimen/article_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="Description"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />


            <TextView
                android:id="@+id/place_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/about_us" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:text="Location"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/place_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_location"
                android:textColor="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="Date"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/Date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="Speaker"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="......" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="Time"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/place_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textColor="#000000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="Ticket price"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="#06430d"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ticket_price"
                android:textColor="#000000" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:src="@drawable/ticket2"
        android:layout_marginBottom="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines" />
</android.support.design.widget.CoordinatorLayout>